--- a/tutorials/rpm-packaging/index.html
+++ b/tutorials/rpm-packaging/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 30 Nov. 2025 -->
+<!-- 01 Dec. 2025 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>RPM Packaging Tutorial</title>
@@ -192,7 +192,7 @@ Lets start with a famous UNIX tool: <code>rsync</code>.
 So a package is an archive file:
 </p>
 
-<pre class="example" id="org88f5111">
+<pre class="example" id="org06b7ed2">
 rsync-3.1.2-1.5.x86_64.rpm
 </pre>
 
@@ -200,7 +200,7 @@ rsync-3.1.2-1.5.x86_64.rpm
 containing all files related to the application:
 </p>
 
-<pre class="example" id="org74672ef">
+<pre class="example" id="orgd46962a">
 $ rpm -qpl rsync-3.1.2-1.5.x86_64.rpm
 
 /etc/logrotate.d/rsync
@@ -231,7 +231,7 @@ to:
 <li><code>Name</code>, <code>Summary</code>, <code>Description</code>, <code>License</code>, etc.</li>
 </ul>
 
-<pre class="example" id="org4251aeb">
+<pre class="example" id="orgd847139">
 $ rpm -qpi rsync-3.1.2-1.5.x86_64.rpm
 
 Name        : rsync
@@ -268,7 +268,7 @@ Distribution: openSUSE Tumbleweed
 (<code>Requires</code>)</li>
 </ul>
 
-<pre class="example" id="org7be9914">
+<pre class="example" id="org0356ec9">
 $ rpm -qp --requires rsync-3.1.2-1.5.x86_64.rpm
 /bin/sh
 /usr/bin/perl
@@ -309,7 +309,7 @@ called during runtime.
 <li>What does the package provide for other packages to work (<code>Provides</code>)</li>
 </ul>
 
-<pre class="example" id="orgccd78e3">
+<pre class="example" id="orge118509">
 $ rpm -qp --provides rsync-3.1.2-1.5.x86_64.rpm
 config(rsync) = 3.1.2-1.5
 rsync = 3.1.2-1.5
@@ -338,7 +338,7 @@ level.
 Packages can be installed with the <code>rpm</code> tools:
 </p>
 
-<pre class="example" id="orge4ed85b">
+<pre class="example" id="org969a035">
 $ rpm -U rsync-3.1.2-1.5.x86_64.rpm
 </pre>
 
@@ -349,7 +349,7 @@ the <code>-p</code> option and use what is called the NVRA
 subset of it, e.g. just name (<code>rsync</code>).
 </p>
 
-<pre class="example" id="org2a4d026">
+<pre class="example" id="orgc239b49">
 $ rpm -q --provides rsync
 </pre>
 
@@ -415,7 +415,7 @@ build system scanned the executable <code>/usr/lib/rsync</code> and realized it 
 linked against <code>libc.so.6</code>:
 </p>
 
-<pre class="example" id="org4059fc5">
+<pre class="example" id="org3ffa3e7">
 $ ldd /usr/bin/rsync
         linux-vdso.so.1 (0x00007ffccb34a000)
         libacl.so.1 =&gt; /lib64/libacl.so.1 (0x00007fc406028000)
@@ -444,7 +444,7 @@ only <code>Requires: libsound</code> (as in package name). Then when he/she trie
 to run it:
 </p>
 
-<pre class="example" id="org2225b8d">
+<pre class="example" id="org50a1256">
 $ musicplayer
 error while loading shared libraries: libsound.so.7: cannot open shared object file: No such file or directory
 </pre>
@@ -555,7 +555,7 @@ includes a command-line tool called <code>zypper</code>. While tools like
 console you will likely interact with <code>zypper</code>.
 </p>
 
-<pre class="example" id="org3a3694d">
+<pre class="example" id="org4fbca9a">
 $ zypper install rsync-3.1.2-1.5.x86_64.rpm
 </pre>
 
@@ -598,7 +598,7 @@ package, and then rpm files are retrieved on demand at installation
 time.
 </p>
 
-<pre class="example" id="orgbfbaa18">
+<pre class="example" id="orgb845ec4">
 $ zypper lr
 
 # | Alias          | Name           | Enabled | GPG Check | Refresh
@@ -660,7 +660,7 @@ rpm files into its cache.
 <div id="outline-container-refreshing-a-repository" class="outline-4">
 <h4 id="refreshing-a-repository">Refreshing a repository</h4>
 <div class="outline-text-4" id="text-refreshing-a-repository">
-<pre class="example" id="orgfad6322">
+<pre class="example" id="orgc7b29ba">
 $ zypper ref
 </pre>
 
@@ -792,7 +792,7 @@ Patterns are used to install a collection of software in a comfortable
 way. For example you can install a working Laptop-oriented system with:
 </p>
 
-<pre class="example" id="orgacd8cc5">
+<pre class="example" id="org6384e76">
 $ zypper install -t pattern laptop
 </pre>
 
@@ -821,7 +821,7 @@ of the magic behind patterns (equivalent to
 Similar to patterns, products can be queried with:
 </p>
 
-<pre class="example" id="org9026b6d">
+<pre class="example" id="orgbb4672e">
 $ zypper search -t product
 </pre>
 
@@ -864,7 +864,7 @@ package manager will dynamically read <code>/sys/devices</code> and make this
 entity have provides like:
 </p>
 
-<pre class="example" id="org52872ca">
+<pre class="example" id="orga13129b">
 Provides :modalias(pci:v0000104Cd0000840[01]sv*sd*bc*sc*i*)
 </pre>
 
@@ -873,7 +873,7 @@ Then, a package providing a WLAN driver for some cards (e.g.
 <code>wlan-kmp-default</code>), could have the following dependencies:
 </p>
 
-<pre class="example" id="org3c709fe">
+<pre class="example" id="orga61efec">
 Supplements: modalias(kernel-default:pci:v0000104Cd0000840[01]sv*sd*bc*sc*i*)
 Supplements: modalias(kernel-default:pci:v0000104Cd00009066sv*sd*bc*sc*i*)
 Supplements: modalias(kernel-default:pci:v000010B7d00006000sv*sd*bc*sc*i*)
@@ -922,7 +922,7 @@ injected as we already mentioned), and how the content of the package is
 created. A very simple spec file would be:
 </p>
 
-<pre class="example" id="org763b453">
+<pre class="example" id="org024c004">
 Name:           mypackage
 Version:        1.0
 Release:        0
@@ -970,7 +970,7 @@ like <code>%{_prefix}</code>, <code>%{_datadir}</code>, <code>%{_mandir}</code>,
 <code>%{_bindir}</code>, etc. You can evaluate a macro like this:
 </p>
 
-<pre class="example" id="org01b1dd8">
+<pre class="example" id="org77d556f">
 $ rpm --eval "%{_libdir}"
 /usr/lib64
 </pre>
@@ -1023,7 +1023,7 @@ file to be in a specific location, so I usually tweak the standard
 configuration so that spec files are searched in the current directory:
 </p>
 
-<pre class="example" id="orgc0f01d7">
+<pre class="example" id="org0672c2d">
 $ cat ~/.rpmmacros
 %topdir /space/packages
 %_builddir %{topdir}/build
@@ -1042,7 +1042,7 @@ As you can see, I also configure it so that built packages are saved in
 Once I have this setup, I can do:
 </p>
 
-<pre class="example" id="org30d27d0">
+<pre class="example" id="org3345a3d">
 $ rpmbuild -bb mypackage.spec
 Executing(%install): /bin/sh -e /var/tmp/rpm-tmp.lVzwnj
 + umask 022
@@ -1067,7 +1067,7 @@ Executing(%clean): /bin/sh -e /var/tmp/rpm-tmp.0xLGri
 Now I can verify the content of the package:
 </p>
 
-<pre class="example" id="org5ce7a7e">
+<pre class="example" id="org8162746">
 % rpm -qpl /space/packages/rpms/x86_64/mypackage-1.0-0.x86_64.rpm
 /usr/share/mypackage/CONTENT
 </pre>
@@ -1127,7 +1127,7 @@ On the other hand, the original <code>oracle-instantclient-sqlplus</code> packag
 is required at runtime, but we don&rsquo;t need it to build our package.
 </p>
 
-<pre class="example" id="org83344fa">
+<pre class="example" id="orge3541aa">
 Name:           gqlplus
 Version:        1.15
 Release:        0
@@ -1195,7 +1195,7 @@ installed by the -devel packages, it will be scanned and the right
 <code>Requires</code> injected:
 </p>
 
-<pre class="example" id="org7597688">
+<pre class="example" id="org21a88b9">
 $ rpm -qp --requires gqlplus-1.15-0.x86_64.rpm
 libc.so.6()(64bit)
 ...
@@ -1210,7 +1210,7 @@ These symbols are provided by the right package, so the solver will
 match them:
 </p>
 
-<pre class="example" id="orge5a531f">
+<pre class="example" id="org0b2dc55">
 rpm -q --whatprovides 'libncurses.so.6()(64bit)'
 libncurses6-6.0-19.1.x86_64
 </pre>
@@ -1281,7 +1281,7 @@ right order and re-published.
 </p>
 
 
-<figure id="org29df615">
+<figure id="org9a68bd0">
 <img src="images/gqlplus-obs.png" alt="gqlplus-obs.png">
 
 </figure>
@@ -1305,7 +1305,7 @@ With the <code>osc</code> tool you can checkout packages from OBS, make changes 
 resubmit them.
 </p>
 
-<pre class="example" id="org039ff99">
+<pre class="example" id="org8a5a624">
 $ osc co home:dmacvicar gqlplus
 A    home:dmacvicar
 A    home:dmacvicar/gqlplus
@@ -1325,7 +1325,7 @@ machine), setting up that environment automatically using the
 a different distribution than the one you are running.
 </p>
 
-<pre class="example" id="org131203e">
+<pre class="example" id="orga7d82b9">
 $ cd home:dmacvicar/gqlplus
 $ osc build openSUSE_Leap_42.2
 ...
@@ -1354,7 +1354,7 @@ sources by hundreds of contributors.
 The <code>spec-cleaner</code> tool can help you keeping your spec file in shape:
 </p>
 
-<pre class="example" id="org827319c">
+<pre class="example" id="orge989fc8">
 $ spec-cleaner -i gqlplus.spec
 </pre>
 
@@ -1406,7 +1406,7 @@ developed. It is easy to find the devel project using the <code>develproject</co
 (<code>dp</code>) command:
 </p>
 
-<pre class="example" id="org12362ca">
+<pre class="example" id="orgaf8a227">
 $ osc dp openSUSE:Factory rsync
 network
 </pre>
@@ -1416,7 +1416,7 @@ Create a branch and a local checkout of the package using the <code>branch</code
 command:
 </p>
 
-<pre class="example" id="org68182da">
+<pre class="example" id="org92985a1">
 $ osc bco network rsync
 A    home:dmacvicar:branches:network
 A    home:dmacvicar:branches:network/rsync
@@ -1447,7 +1447,7 @@ into the devel project. To do this, use the <code>submitrequest</code> (<code>sr
 command:
 </p>
 
-<pre class="example" id="org18ebfff">
+<pre class="example" id="org8a91d9f">
 $ osc sr
 </pre>
 
@@ -1466,7 +1466,7 @@ needed, however.
 <footer id="postamble" class="status">
 <p class="date">Date: 2017-03-08</p>
 <p class="author">Author: Duncan Mac-Vicar P.</p>
-<p class="date">Created: 30 Nov. 2025</p>
+<p class="date">Created: 01 Dec. 2025</p>
 </footer>
 </body>
 </html>
